--- a/overview/architecture-and-concepts/architecture-overview.mdx
+++ b/overview/architecture-and-concepts/architecture-overview.mdx
@@ -1,150 +1,133 @@
 ---
-title: "System Architecture Diagram"
-description: "Visualizes the primary building blocks of GoogleTest—including test runners, assertion engines, and reporting modules—alongside their relationships. Aids comprehension of how GoogleTest fits into a typical C++ project's testing lifecycle."
+title: "System Architecture (with Diagram)"
+description: "Introduces GoogleTest’s high-level architecture, from test declaration and discovery to execution and reporting. Includes a mermaid diagram visualizing the relationship between key modules: test cases, assertions, mocks, runners, and integrations."
 ---
 
-# System Architecture Diagram
+# System Architecture (with Diagram)
 
-## Overview
+## Understanding GoogleTest’s High-Level Architecture
 
-GoogleTest is a comprehensive C++ testing framework designed to integrate seamlessly into your software development lifecycle. The System Architecture Diagram page offers a visual guide to the primary components that constitute GoogleTest, illustrating how they interact to support test execution, assertion handling, and result reporting.
-
-Understanding this architecture will provide you with insight into how GoogleTest operates behind the scenes, fostering confidence in the framework's robustness and guiding advanced users interested in extending or troubleshooting their test environment.
-
----
-
-## Core Components of GoogleTest Architecture
-
-This section breaks down the main building blocks of the GoogleTest system, highlighting their roles and how they collaborate during a typical test run.
-
-### 1. Test Runners
-
-The Test Runner is the entry point of the testing process. It is responsible for:
-
-- Discovering and loading test cases within your codebase.
-- Handling command line arguments related to test execution.
-- Initiating the execution of individual tests or test suites.
-
-The test runner manages the overall orchestration and lifecycle of tests, including setup and teardown procedures.
-
-### 2. Assertion Engine
-
-Assertions are the core mechanism for verifying test conditions. The Assertion Engine:
-
-- Provides a rich set of assertion macros for common comparisons and checks.
-- Tracks assertion results, including successes, failures, and fatal errors.
-- Supports detailed output and diagnostic information on failures to facilitate debugging.
-
-By integrating assertions tightly with test execution, the engine enables immediate and informative feedback whenever expectations are unmet.
-
-### 3. Test Execution Framework
-
-This component manages the execution flow within tests:
-
-- Runs individual test methods.
-- Supports fixture setup and teardown routines.
-- Manages parameterized tests and typed tests.
-
-It ensures tests are isolated and run consistently, handling exceptions and errors gracefully.
-
-### 4. Reporting Modules
-
-Result reporting is vital for understanding test outcomes. GoogleTest's Reporting Modules:
-
-- Collect and format test outcomes, including passing tests, failures, and skips.
-- Support various output formats (such as XML, JSON, or plain text).
-- Integrate with Continuous Integration systems or external reporting tools.
-
-These modules provide clear and comprehensive summaries of test results, making it easier to assess software quality quickly.
-
-### 5. Extensions and Utilities
-
-GoogleTest architecture supports extensibility:
-
-- Plugins and user-defined event listeners can hook into the test lifecycle.
-- Utilities for test filtering, sharding, and retry mechanisms.
-- Facilities to integrate with mock objects (via gMock) for advanced testing strategies.
-
-This modular design allows users to tailor the test framework to complex and evolving testing needs.
+GoogleTest is built on a modular architecture designed to streamline your testing workflow from start to finish. This page will guide you through the essential components involved when you declare, discover, execute, and report your tests using GoogleTest. By understanding these building blocks, you can better grasp how GoogleTest manages the testing process, enabling more effective usage and troubleshooting.
 
 ---
 
-## How It Fits Into Your Testing Workflow
+## Core Components of GoogleTest
 
-The System Architecture Diagram situates GoogleTest within the typical developer and CI environment:
+### Test Cases and Test Suites
+- **Definition and Organization:** Users define individual tests using macros like `TEST()` or `TEST_F()` which are grouped into test suites. Test cases encapsulate one or more tests that share context or setup, providing logical organization and reuse.
+- **Automatic Registration:** Once defined, tests are automatically registered without any manual enumeration, enabling seamless discovery and execution.
+
+### Assertions
+- **Verification Points:** Assertions like `EXPECT_EQ`, `ASSERT_TRUE`, etc., are embedded within tests to verify conditions.
+- **Rich Assertion Library:** GoogleTest provides numerous assertion macros to cover various testing needs, reporting helpful contextual messages on failure.
+
+### Mocking with GoogleMock
+- Although not the primary focus of this architecture overview, `gMock` integrates tightly with GoogleTest to enable declarative mocking via mock classes, expectations, and mock method invocations within tests.
+
+### Test Runners
+- **Test Execution Engine:** The runner iterates over all registered tests, sets up fixtures, runs tests, collects assertion results, and manages test lifecycles.
+- **Test Filters and Flags:** Users can control which tests to run via filters and command-line flags parsed at initialization.
+
+### Reporting and Output
+- **Test Result Aggregation:** After execution, results including passed and failed tests, skipped tests, and assertion failures are aggregated.
+- **Friendly Output Formats:** GoogleTest supports various output formats (plain text, XML, etc.) for human readability and integration into CI pipelines.
+
+---
+
+## Typical User Workflow
+
+1. **Write Tests:** Define test cases and test suites using Google's macros.
+2. **Compile Tests:** Link with the GoogleTest framework, ensuring mocking support if needed.
+3. **Run Tests:** Execute tests via the test runner, optionally filtering test suites or individual tests.
+4. **Inspect Results:** Review detailed reports and logs highlighting failures, errors, and test progress.
+
+Understanding how these pieces interact enriches your ability to write robust tests and integrate GoogleTest effectively into your development process.
+
+---
+
+## High-Level Architecture Diagram
+
+The following Mermaid diagram visually illustrates the relationship and flow between the key GoogleTest modules:
 
 ```mermaid
 flowchart TD
-  Developer["Developer Writes Tests"] -->|Build & Run| TestRunner["Test Runner"]
-  TestRunner -->|Runs| TestExecution["Test Execution Framework"]
-  TestExecution -->|Uses| AssertionEngine["Assertion Engine"]
-  TestExecution -->|Invokes| ReportingModule["Reporting Module"]
-  TestExecution --> Extensions["Extensions & Utilities"]
-  ReportingModule --> Developer
-  Extensions --> TestExecution
-```
 
-- Developers write tests that are discovered and run by the Test Runner.
-- The Test Execution Framework runs each test, interleaving fixture management and invoking assertions.
-- Assertions validate the expected behavior.
-- Reporting Modules collect and relay results back to developers in real-time or via CI systems.
+  subgraph User Code
+    Tests[Test Cases & Test Suites]
+    Mocks[Mocks (GoogleMock)]
+  end
+
+  subgraph Core Framework
+    Reg[Automatic Test Registration]
+    Runner[Test Runner]
+    Assertion[Assertions]
+    Report[Test Reporting]
+    Filter[Test Filters & Flags]
+  end
+
+  Tests --> Reg
+  Mocks --> Tests
+  Reg --> Runner
+  Runner --> Assertion
+  Runner --> Report
+  Filter --> Runner
+
+  %% Show interactions
+  Tests -.->|Use| Assertion
+  Mocks -.->|Use| Assertion
+
+  %% Notes
+  classDef usercode fill:#e3f2fd,stroke:#1976d2,stroke-width:2px;
+  classDef core fill:#b3e5fc,stroke:#0288d1,stroke-width:2px;
+  class Tests,Mocks usercode;
+  class Reg,Runner,Assertion,Report,Filter core;
+
+```
 
 ---
 
-## Practical Implications
+## Practical Benefits of Understanding the Architecture
 
-Understanding the architecture aids users in:
-
-- Diagnosing test failures and performance bottlenecks.
-- Extending GoogleTest by creating custom listeners or reporters.
-- Integrating GoogleTest smoothly with build systems and CI/CD workflows.
-- Utilizing gMock effectively to mock dependencies during test execution.
-
-Knowledge of this layered structure empowers teams to leverage GoogleTest’s full potential and troubleshoot issues with clarity.
+- **Greater Test Control:** Knowing how tests are discovered and run allows you to fine-tune execution with filters and flags.
+- **Easier Troubleshooting:** Recognize how failed assertions are caught and reported for faster debugging.
+- **Better Integration:** Understand where mocking fits into the workflow for effective use of GoogleMock alongside GoogleTest.
 
 ---
 
 ## Tips and Best Practices
 
-- **Structure your tests** thoughtfully to take full advantage of the fixture lifecycle.
-- **Leverage built-in reporters** or customize them to fit your project’s reporting needs.
-- **Use event listeners** to hook into the testing process for advanced logging or integration.
-- **Combine with gMock** to mock complex dependencies and verify interactions.
-
-Synchronization between these components ensures robust test execution and reliable feedback.
+- **Define Tests Clearly:** Use descriptive names in your test suites and test cases to aid in automated filtering.
+- **Setup Mock Expectations Early:** Set mock expectations before exercising tests to avoid undefined behaviors.
+- **Leverage Test Filters:** Use GoogleTest's filtering features to run subsets of tests during iterative development.
+- **Monitor Test Output Verbosity:** Adjust `--gtest_verbose` and `--gmock_verbose` flags for the right level of feedback.
 
 ---
 
 ## Troubleshooting Common Issues
 
-| Issue                              | Possible Cause                             | Suggested Action                              |
-|----------------------------------|-------------------------------------------|-----------------------------------------------|
-| Tests not discovered             | Improper naming or missing test macros     | Check test naming conventions and includes    |
-| Assertions do not report details | Verbosity level too low                     | Increase logging verbosity (`--gtest_verbose`) |
-| Slow test runs                   | Heavy fixture setup/teardown, or nested mocks | Optimize fixture usage, profile tests          |
-| Test reports not generated       | Reporting module misconfiguration           | Ensure output paths and formats are correctly set |
+<AccordionGroup title="Common Architecture-Related Troubleshooting">
+<Accordion title="Tests Not Being Discovered">
+Verify your tests are properly defined with the `TEST()` or `TEST_F()` macros. Ensure your test binary is linked with GoogleTest and initialized with `testing::InitGoogleTest()` before running `RUN_ALL_TESTS()`.
+</Accordion>
+<Accordion title="Mock Expectations Not Verified">
+Make sure mocks are destroyed (go out of scope) by test end or explicitly call `Mock::VerifyAndClearExpectations(&mock_obj)`. Also, set expectations before exercising the mocked methods.
+</Accordion>
+<Accordion title="Unexpected Test Failures with Assertion Messages">
+Check that your assertions align with test expectations; understand that GoogleTest continues after nonfatal failures by design, allowing multiple issues per run to be reported.
+</Accordion>
+</AccordionGroup>
 
 ---
 
-## Getting Started Preview
+## Next Steps
 
-Ready to explore GoogleTest? Begin by:
-
-- Installing GoogleTest and integrating it into your build system.
-- Writing your first test case to observe the assertion and reporting flow.
-- Reviewing the [Writing Your First Test](https://google.github.io/googletest/primer.html) and [Feature Summary](../overview/feature-overview/feature-summary) pages next.
-
-By mastering the architecture, you position yourself to write efficient, maintainable, and extensible tests.
+- Explore the [Writing Your First Test](../../getting-started/configuration-first-run/write-first-test.md) guide to learn practical test creation.
+- Dive into [Mocking Basics](../../guides/core-workflows/mocking-basics.md) to see how mocking integrates within the architecture.
+- Review [Feature Highlights](../../overview/feature-glance/feature-highlights.md) for a broader understanding of GoogleTest’s capabilities.
 
 ---
 
-## Further Reading
+_Last updated in sync with [GoogleTest official repository](https://github.com/google/googletest) on branch `main`._
 
-- [GoogleTest: What is GoogleTest?](../overview/product-intro-and-value/what-is-googletest)
-- [GoogleTest Feature Summary](../overview/feature-overview/feature-summary)
-- [Using Mocks in C++ Tests](../guides/core-workflows/using-mocks-in-tests)
-- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md)
 
 ---
-
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/include/gmock/gmock-spec-builders.h", "range": "1-594"},{"path": "googlemock/src/gmock-spec-builders.cc", "range": "1-277"}]} />
