--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,147 +1,134 @@
 ---
 title: "System Requirements"
-description: "Understand the operating systems, compilers, C++ standards, and dependencies that GoogleTest supports. Learn about supported platforms so you can ensure compatibility and avoid environment-related issues from the outset."
+description: "Outlines the supported platforms, compilers, and minimum C++ standard required for GoogleTest. Gives users confidence that their development environment is compatible and helps avoid compatibility surprises."
 ---
 
-# System Requirements
+# System Requirements for GoogleTest
 
-Ensure your development environment supports GoogleTest by meeting the following system requirements and dependencies. Proper alignment with these requirements guarantees a smooth build and testing experience.
-
----
-
-## 1. Supported Operating Systems
-
-GoogleTest supports a wide range of operating systems to enable cross-platform testing:
-
-- **Linux:** Various distributions including Debian, Ubuntu, Fedora, and others
-- **Windows:** Desktop Windows, including MSVC toolchain support; MinGW
-- **Mac OS X:** Including support for development with Xcode
-- **BSD Variants:** FreeBSD, OpenBSD, NetBSD
-- **Others:** Solaris, AIX, Android, Windows Mobile, embedded platforms like ESP32 and ESP8266
-
-> Note: Some platforms may have limited support or may require additional setup for threading and file system capabilities.
-
-## 2. Compiler and Toolchain Requirements
-
-GoogleTest requires a C++ compiler capable of supporting modern standards and features:
-
-- Must support **C++17** or later (required for core library functionality).
-- Officially tested with:
-  - Microsoft Visual C++ (MSVC) 2017 Update 3 and newer
-  - GCC 7.0.0 and later
-  - Clang (including Apple Clang) with C++17 support
-  - Intel LLVM Compiler supporting C++17
-- CMake support is required for build configuration. Minimum recommended version is **CMake 3.13** for building standalone, **3.14+** if you use `FetchContent_MakeAvailable()`.
-
-### Compiler Flags Handling
-
-GoogleTest’s build system includes logic to adjust compiler flags depending on:
-
-- Compiler type (MSVC, GCC, Clang, IntelLLVM, etc.)
-- Build type (static vs shared libraries)
-- Threading model (pthreads detection and flags)
-
-This ensures safer behavior like stricter warnings and correct runtime library linkage.
-
-
-## 3. Required Dependencies
-
-### Core Dependencies:
-
-- **CMake:** For generating build scripts.
-- **Threads library:** Supports pthreads on *nix platforms for thread safety in tests.
-  - Disabled on MinGW where pthreads support is partial or unreliable.
-- **Python 3:** Required only if building GoogleTest’s own Python-based tests.
-
-### Recommended:
-
-- An environment that supports or has configured thread support improves test stability.
-  Adjust the `-DGTEST_HAS_PTHREAD=1` or `0` manually if required.
-
-## 4. C++ Standard and Toolchain Settings
-
-- GoogleTest **requires C++17**.
-- To ensure compatibility, specify in your project's top-level CMakeLists.txt:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-- When compiling, GoogleTest configures appropriate compiler flags for exception support, RTTI, warnings, and other platform-specific tweaks.
-
-## 5. Platform-Specific Considerations
-
-- **Windows:**
-  - Visual Studio users may encounter runtime library conflicts when linking GoogleTest; use the CMake option `gtest_force_shared_crt` to align runtime linkage.
-  - GoogleTest ensures UTF-8 encoding for sources.
-
-- **MinGW:**
-  - pthreads support is disabled by default.
-  - Ninja builds might incorrectly specify some compiler flags, which GoogleTest corrects internally.
-
-- **Mac OS X:**
-  - Xcode project files are generated for easy native building.
-
-- **Embedded Platforms:**
-  - Platforms like ESP8266 and ESP32 have limited file system and threading support; some GoogleTest features may be restricted or disabled.
-
-## 6. Threading and Concurrency Support
-
-- GoogleTest is thread-safe **if pthreads are available and enabled**.
-- Detection of pthreads support happens automatically during build configuration.
-- You can override thread support with compiler definitions:
-
-  - `-DGTEST_HAS_PTHREAD=1` to force enable
-  - `-DGTEST_HAS_PTHREAD=0` to disable
-
-- Without threading support, GoogleTest implements dummy synchronization primitives, limiting safe concurrent test execution.
-
-## 7. File System and I/O
-
-- GoogleTest requires a functional file system for some test features (such as death tests and output capture).
-- Most supported platforms have file system support enabled by default.
-- Embedded or restricted platforms might disable these features.
-
-## 8. Recommended Environment Setup
-
-### Using CMake to Build GoogleTest Standalone
-
-```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-cd googletest
-mkdir build
-cd build
-cmake ..
-make
-sudo make install
-```
-
-- For building **only GoogleTest** without GoogleMock:
-
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
-
-### Incorporating GoogleTest into Existing Projects
-
-- Use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed.
-- Or, embed GoogleTest sources via `add_subdirectory(googletest)`.
-- Make sure your project also meets or enforces the C++17 standard.
-
-## 9. Troubleshooting
-
-- If your compiler fails due to missing C++17 support, upgrade your compiler.
-- On Windows, if you encounter runtime library mismatch errors, enable `gtest_force_shared_crt`.
-- If tests using threads fail to link, ensure pthread libraries are correctly linked or disable pthread support.
-- For cross-compilation environments, review pkg-config usage and sysroot settings to ensure correct include and library paths.
-
-## 10. Additional Resources
-
-- [GoogleTest README.md](https://github.com/google/googletest/blob/main/googletest/README.md): Detailed build and usage instructions.
-- [Platform Portability and Internal Utilities](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h): Low-level platform abstractions crucial for compatibility.
-- [Pkg-config Usage Guide](docs/pkgconfig.md): Guidance on using pkg-config in various build environments.
+GoogleTest is a powerful, portable C++ testing framework designed to work across a variety of development platforms. This page outlines the supported operating systems, compiler versions, and C++ language standards you need to successfully build and run GoogleTest in your environment. Ensuring your system meets these requirements will help you avoid compatibility surprises and get started efficiently.
 
 ---
 
-For detailed usage and configuration beyond system requirements, consult related documentation pages such as [Configuring GoogleTest in Your Project](../getting-started/prerequisites-installation/configuration-setup) and [Setting Up and Installing GoogleTest](../guides/getting-started/setup-installation).
+## Supported Platforms
+
+GoogleTest has been tested and verified on the following operating systems:
+
+- **Linux** (various distributions)
+- **Windows** (including Windows 10 and Windows Server editions)
+- **macOS** (modern supported versions)
+
+The framework is designed for broad portability and should work on any standard-compliant platform that supports a modern C++ compiler.
+
+## Supported Compilers
+
+To build and use GoogleTest, your C++ compiler must meet the minimum feature and version requirements:
+
+- **GCC** (GNU Compiler Collection): Version 7.0.0 or newer is recommended to ensure compliant C++17 support and avoid warnings/errors.
+- **Clang**: Fully supported; versions compatible with C++17.
+- **MSVC (Microsoft Visual C++)**: Minimum required version is Visual Studio 2015 (compiler version 14.0). Early versions such as MSVC 2013 or earlier will not compile GoogleTest.
+- **Intel compilers** and other major compilers that support C++17 should work, provided they meet or exceed the minimum C++17 standard.
+
+
+<Check>
+Note: If you are using MSVC earlier than 2015, the build will fail with an error indicating the minimum version requirement.
+</Check>
+
+## Required C++ Standard Version
+
+GoogleTest requires at least the **C++17** standard to be supported and enabled in your build environment. This is due to the use of modern C++ features for robustness and portability.
+
+**How to ensure C++17 is enabled:**
+
+- When using **CMake**, add the following lines to your top-level `CMakeLists.txt`:
+
+  ```cmake
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  ```
+
+- If you cannot use CMake or have a C project, pass the equivalent flags directly to the compiler, for example:
+
+  - For GCC and Clang:
+    ```bash
+    -std=c++17
+    ```
+
+  - For MSVC, use `/std:c++17` or ensure your Visual Studio project is configured to use the C++17 standard.
+
+## Additional Tooling and Requirements
+
+- **Build System:** GoogleTest supports building with [CMake](https://cmake.org/) and is compatible with many build environments.
+
+- **Threading:** GoogleTest is thread-safe on platforms with pthread support. When pthread is available, relevant compiler and linker flags must be added (usually handled automatically by CMake).
+
+- **Runtime:** On Windows, it’s recommended to configure the runtime linking correctly (see Visual Studio dynamic vs static runtimes in the CMake build docs) to avoid linker errors.
+
+
+## Summary Table
+
+| Requirement                    | Details                                               |
+|-------------------------------|-------------------------------------------------------|
+| Operating Systems Supported    | Linux, Windows, macOS                                 |
+| Minimum Compiler Versions      | GCC >=7.0, Clang (latest), MSVC >= 2015 (v14.0)       |
+| C++ Language Standard          | C++17 minimum, required                               |
+| Build Tools                   | CMake 3.13 or later recommended                        |
+| Threading                     | Requires pthread support for thread safety on Linux/macOS |
+
+---
+
+## Troubleshooting Compatibility Issues
+
+- **Compiler Version Errors:** If your build fails with errors about unsupported compiler versions, verify your compiler version and update if necessary.
+
+- **C++17 Support Missing:** Ensure that your build flags explicitly specify C++17 or later.
+
+- **MSVC Linker Errors:** On Windows, enable `gtest_force_shared_crt` in CMake to match runtime library linkage.
+
+- **Pthread Flags:** If you receive errors related to pthread symbols on Linux/macOS, verify your linker flags include `-lpthread`. Using CMake should handle this automatically.
+
+
+For detailed installation instructions and build configuration examples, please visit the [Installation with CMake guide](/getting-started/prerequisites-installation/install-via-cmake).
+
+To verify your environment is compatible, see the [Validating Your Setup](/getting-started/troubleshooting-validation/validate-setup) documentation.
+
+
+---
+
+## Further Reading and References
+
+- [GoogleTest Primer](../../docs/primer.md): Learn how to write tests once your environment is set up.
+- [GoogleMock README](../../googlemock/README.md): If using mocking capabilities along with GoogleTest.
+- [Build system integration](../../guides/integration-and-optimization/build-system-integration.md): For details on integrating GoogleTest into your projects.
+
+
+<Note>
+This page focuses specifically on the foundational system requirements that ensure GoogleTest builds and runs reliably. For configuration steps or troubleshooting, consult the related getting started and troubleshooting documentation.
+</Note>
+
+
+---
+
+## Summary Diagram: Compatibility Overview
+
+```mermaid
+flowchart TD
+  OS["Supported Operating Systems"]
+  Compiler["Supported Compilers"]
+  Std["C++17 Standard Requirement"]
+
+  OS --> Compatible["Compatible Environment"]
+  Compiler --> Compatible
+  Std --> Compatible
+
+  Compatible --> Build["GoogleTest Build Success"]
+  Build --> Test["Run Tests"]
+```
+
+
+---
+
+*Last Updated: Based on GoogleTest Version 1.17.0 and above.*
+
+---
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "googletest/README.md", "range": "1-200"},{"path": "googletest/cmake/internal_utils.cmake", "range": "1-150"},{"path": "googlemock/include/gmock/internal/gmock-port.h", "range": "20-90"}]} />
